[project]
name = "calls"
version = "0.1.0"
description = "Synthetic data generation to simulate a call center."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.12.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
